--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,7 +8,6 @@
 
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
-    <script src="/node_modules/ng2-charts/node_modules/chart.js/dist/Chart.min.js"></script>
     <script src="/node_modules/core-js/client/shim.min.js"></script>
     <script src="/node_modules/zone.js/dist/zone.min.js"></script>
     <script src="/node_modules/reflect-metadata/Reflect.js"></script>
@@ -24,5 +23,6 @@
     <my-app>
       Loading...
     </my-app>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   </body>
 </html>
