implement a costom svg chart solution

--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,11 @@
   </my-app>
 
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rokkitt:400" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+  <link async="async" href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
+  <link async="async" href="https://fonts.googleapis.com/css?family=Rokkitt:400" rel="stylesheet">
+
+  <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenLite.min.js"></script>
+  <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/CSSPlugin.min.js"></script>
 
   <% if (false) { %>
 
