fix my scroll nav

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,6 @@
     Loading...
   </my-app>
 
-
-  <link async="async" href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
-  <link async="async" href="https://fonts.googleapis.com/css?family=Rokkitt:400" rel="stylesheet">
-
   <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenLite.min.js"></script>
   <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/CSSPlugin.min.js"></script>
 
@@ -49,5 +45,7 @@
   <script src="/webpack-dev-server.js"></script>
   <% } %>
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rokkitt:400" rel="stylesheet">
 </body>
 </html>
