make font async

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
   <script src="/webpack-dev-server.js"></script>
   <% } %>
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rokkitt:400" rel="stylesheet">
+  <link async href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
+  <link async href="https://fonts.googleapis.com/css?family=Rokkitt:400" rel="stylesheet">
 </body>
 </html>
