--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,18 @@
   <!-- Webpack Dev Server reload -->
   <script src="/webpack-dev-server.js"></script>
   <% } %>
-
-  <link async href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
-  <link async href="https://fonts.googleapis.com/css?family=Rokkitt:400" rel="stylesheet">
-</body>
+  <script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [ 'Rokkitt:400', 'Open+Sans:300,700' ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+      '://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })(); </script>
+  </body>
 </html>
